syntax = "proto3";

package casepb;

option go_package = "oda/api/proto/case;casepb";

service CaseService {
  rpc CreateCase(CreateCaseRequest) returns (Case);
  rpc GetCase(GetCaseRequest) returns (Case);
  rpc ListCases(ListCasesRequest) returns (CaseList);
  rpc AssignCaseToPlayer(AssignCaseRequest) returns (PlayerCase);
  rpc GetPlayerCase(GetPlayerCaseRequest) returns (GetPlayerCaseResponse);
}

message Case {
  string id = 1;
  string title = 2;
  string description = 3;
}

message CreateCaseRequest {
  string title = 1;
  string description = 2;
}

message GetCaseRequest {
  string id = 1;
}

message ListCasesRequest {}

message CaseList {
  repeated Case cases = 1;
}

message PlayerCase {
  string player_id = 1;
  string case_id = 2;
  string status = 3;
}

message AssignCaseRequest {
  string player_id = 1;
  string case_id = 2;
}

message GetPlayerCaseRequest {
  string player_id = 1;
}


message GetPlayerCaseResponse {
  PlayerCase player_case = 1;
  Case case = 2;
}
